Removed book covers, bodyLink fix

--- a/style.css
+++ b/style.css
@@ -61,8 +61,18 @@ a:visited {
 }
 
 a {
-  
-    text-decoration: none;
+    text-decoration: none;    
+}
+
+#bodyLink {
+    background-image: linear-gradient(
+        180deg, rgba(0,0,0,0),
+        rgba(0,0,0,0) 84%, 
+        #222222 84%,
+        #222222 88%,
+        rgba(0,0,0,0) 88%,
+        rgba(0,0,0,0)
+    );
 }
 
 .hover_img {
